--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -51,7 +51,7 @@
     opacity: 0;
     position: relative;
     z-index: 2;
-    transition: all 0.5s 0.5s;
+    transition: all 300ms 450ms;
 
     li {
       font-size: 2.6rem;
