--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -151,12 +151,12 @@
               font-size: 1.7rem;
             }
             p {
-              font-size: 1.5rem;
+              font-size: 1.4rem;
             }
 
             ul {
               li {
-                font-size: 1.3rem;
+                font-size: 1.2rem;
               }
             }
           }
